# SFM

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
analysis/: __init__.py
analysis/cea/: __init__.py  ceac.py  decision_model.py  psa.py  tornado.py
analysis/source_data/: __init__.py  _common.py  generate_source_data.py
configs/: biomarker.yaml  ckm_comorbidity.yaml  ckm_staging.yaml  ophthalmic_aptos.yaml  ophthalmic_glaucoma.yaml  ophthalmic_idrid.yaml  ophthalmic_jsiec.yaml  ophthalmic_messidor2.yaml  ophthalmic_odir5k.yaml  ophthalmic_papila.yaml  ophthalmic_retina.yaml  pretrain_dino_clip.yaml  progression.yaml  schema.yaml
configs/datasplits/: aptos_test.txt  aptos_train.txt  aptos_val.txt  glaucoma_test.txt  glaucoma_train.txt  glaucoma_val.txt  idrid_test.txt  idrid_train.txt  idrid_val.txt  jsiec_class_map.csv  jsiec_test.txt  jsiec_train.txt  jsiec_val.txt  messidor2_test.txt  messidor2_train.txt  messidor2_val.txt  odir_test.txt  odir_train.txt  odir_val.txt  papila_test.txt  papila_train.txt  papila_val.txt  rfmid_test.txt  rfmid_train.txt  rfmid_val.txt
docs/: data_format.md  model_card.md  reproducibility.md
sfm/: __init__.py  _optional.py
sfm/data/: __init__.py  retinal_dataset.py  text_descriptors.py  transforms.py
sfm/finetune/: __init__.py  biomarker.py  ckm_comorbidity.py  ckm_staging.py  ophthalmic_transfer.py  progression.py
sfm/models/: __init__.py  encoder.py  moe.py  text_encoder.py
sfm/pretraining/: __init__.py  clip_align.py  dino.py  trainer.py
sfm/utils/: __init__.py  (+3 more)
tests/: test_data_loader.py  test_decision_model.py  test_metrics.py
